Fixed developer image becoming too large when viewed on a screen width of more than 2256px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,8 +217,9 @@ footer {
 }
 
 .js-image {
-    width: 83%;
-    border-radius: 50%;
+    width: 700px;
+    height: 700px;
+    border-radius: 35%;
 }
 
 .pi-img-block {
@@ -404,13 +405,14 @@ table tr td {
     }
 
     .js-image {
-        width: 55%;
+        width: 80%;
+        height: 80%;
+        margin-top: 10%;
     }
 
     .pi-section {
         border-radius: 0;
         min-height: 400px;
-        margin-top: 50px;
     }
 
     .nyk-block {
@@ -467,8 +469,4 @@ table tr td {
         padding-top: 5%;
     }
 
-    .js-image {
-        width: 70%;
-        margin-top: 40px;
-    }
 }
